// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data loading mdx works: page 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>This is page one with a counter</title>
    <meta name=\\"description\\" content=\\"Fantastic\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
  </head>
  <body class=\\"m-4\\">
    <h1>Page One</h1>
    <p>I am a page.</p>
    <p>This is stateful:</p>
    <button data-test-id=\\"counter-button\\">Clicked 0</button>
    <p>Here's a code block.</p>
    <pre><code class=\\"language-jsx\\">import React from \\"react\\";

export default function PageOne() {
  return &lt;div&gt;Page One&lt;/div&gt;;
}
</code></pre>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"pages/one\\": {
              fileName: \\"pages/one-eec37527.js\\",
              imports: [\\"_shared/index-27f12631.js\\", \\"_shared/esm-73f17297.js\\"],
            },
          },
          routes: { \\"pages/one\\": { id: \\"pages/one\\", path: \\"/page/one\\" } },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/page/one\\",
            route: { id: \\"pages/one\\", path: \\"/page/one\\" },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: { \\"pages/one\\": null },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/pages/one-eec37527.js\\";
      window.__remixRoutes = { \\"pages/one\\": route0 };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading mdx works: page 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>This is page one with a counter</title>
    <meta name=\\"description\\" content=\\"Fantastic\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
  </head>
  <body class=\\"m-4\\">
    <h1>Page One</h1>
    <p>I am a page.</p>
    <p>This is stateful:</p>
    <button data-test-id=\\"counter-button\\">Clicked 1</button>
    <p>Here's a code block.</p>
    <pre><code class=\\"language-jsx\\">import React from \\"react\\";

export default function PageOne() {
  return &lt;div&gt;Page One&lt;/div&gt;;
}
</code></pre>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"pages/one\\": {
              fileName: \\"pages/one-eec37527.js\\",
              imports: [\\"_shared/index-27f12631.js\\", \\"_shared/esm-73f17297.js\\"],
            },
          },
          routes: { \\"pages/one\\": { id: \\"pages/one\\", path: \\"/page/one\\" } },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/page/one\\",
            route: { id: \\"pages/one\\", path: \\"/page/one\\" },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: { \\"pages/one\\": null },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/pages/one-eec37527.js\\";
      window.__remixRoutes = { \\"pages/one\\": route0 };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning back after a reload loads data for the previous route: page 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/gists\\": {
              fileName: \\"routes/gists-ee32124d.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
            \\"routes/gists/index\\": {
              fileName: \\"routes/gists/index-a24a2fe0.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"routes/gists.css\\": { fileName: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
            \\"routes/gists/index\\": {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\" },
          },
          {
            params: {},
            pathname: \\"/gists/\\",
            route: {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-ee32124d.js\\";
      import * as route1 from \\"/build/routes/gists/index-a24a2fe0.js\\";
      window.__remixRoutes = {
        \\"routes/gists\\": route0,
        \\"routes/gists/index\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning back after a reload loads data for the previous route: page 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>1 gists from mjackson</title>
    <meta name=\\"description\\" content=\\"View all of the gists from mjackson\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/$username\\">
        <h2>All gists from mjackson</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/gists\\": {
              fileName: \\"routes/gists-ee32124d.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
            \\"routes/gists/index\\": {
              fileName: \\"routes/gists/index-a24a2fe0.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"routes/gists.css\\": { fileName: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
            \\"routes/gists/index\\": {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\" },
          },
          {
            params: {},
            pathname: \\"/gists/\\",
            route: {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-ee32124d.js\\";
      import * as route1 from \\"/build/routes/gists/index-a24a2fe0.js\\";
      window.__remixRoutes = {
        \\"routes/gists\\": route0,
        \\"routes/gists/index\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning back after a reload loads data for the previous route: page 3`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/gists\\": {
              fileName: \\"routes/gists-ee32124d.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
            \\"routes/gists/$username\\": {
              fileName: \\"routes/gists/$username-ced94f73.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"routes/gists.css\\": { fileName: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
            \\"routes/gists/$username\\": {
              id: \\"routes/gists/$username\\",
              path: \\":username\\",
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\" },
          },
          {
            params: { username: \\"mjackson\\" },
            pathname: \\"/gists/mjackson\\",
            route: {
              id: \\"routes/gists/$username\\",
              path: \\":username\\",
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/$username\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-ee32124d.js\\";
      import * as route1 from \\"/build/routes/gists/$username-ced94f73.js\\";
      window.__remixRoutes = {
        \\"routes/gists\\": route0,
        \\"routes/gists/$username\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning forward to a page we have already seen does not fetch any data for that page: page 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/gists\\": {
              fileName: \\"routes/gists-ee32124d.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
            \\"routes/gists/index\\": {
              fileName: \\"routes/gists/index-a24a2fe0.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"routes/gists.css\\": { fileName: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
            \\"routes/gists/index\\": {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\" },
          },
          {
            params: {},
            pathname: \\"/gists/\\",
            route: {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-ee32124d.js\\";
      import * as route1 from \\"/build/routes/gists/index-a24a2fe0.js\\";
      window.__remixRoutes = {
        \\"routes/gists\\": route0,
        \\"routes/gists/index\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning forward to a page we have already seen does not fetch any data for that page: page 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>1 gists from mjackson</title>
    <meta name=\\"description\\" content=\\"View all of the gists from mjackson\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/$username\\">
        <h2>All gists from mjackson</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/gists\\": {
              fileName: \\"routes/gists-ee32124d.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
            \\"routes/gists/index\\": {
              fileName: \\"routes/gists/index-a24a2fe0.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"routes/gists.css\\": { fileName: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
            \\"routes/gists/index\\": {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\" },
          },
          {
            params: {},
            pathname: \\"/gists/\\",
            route: {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-ee32124d.js\\";
      import * as route1 from \\"/build/routes/gists/index-a24a2fe0.js\\";
      window.__remixRoutes = {
        \\"routes/gists\\": route0,
        \\"routes/gists/index\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning forward to a page we have already seen does not fetch any data for that page: page 3`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/gists\\": {
              fileName: \\"routes/gists-ee32124d.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
            \\"routes/gists/index\\": {
              fileName: \\"routes/gists/index-a24a2fe0.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"routes/gists.css\\": { fileName: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
            \\"routes/gists/index\\": {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\" },
          },
          {
            params: {},
            pathname: \\"/gists/\\",
            route: {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-ee32124d.js\\";
      import * as route1 from \\"/build/routes/gists/index-a24a2fe0.js\\";
      window.__remixRoutes = {
        \\"routes/gists\\": route0,
        \\"routes/gists/index\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning forward to a page we have already seen does not fetch any data for that page: page 4`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>1 gists from mjackson</title>
    <meta name=\\"description\\" content=\\"View all of the gists from mjackson\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/$username\\">
        <h2>All gists from mjackson</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/gists\\": {
              fileName: \\"routes/gists-ee32124d.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
            \\"routes/gists/index\\": {
              fileName: \\"routes/gists/index-a24a2fe0.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"routes/gists.css\\": { fileName: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
            \\"routes/gists/index\\": {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\" },
          },
          {
            params: {},
            pathname: \\"/gists/\\",
            route: {
              id: \\"routes/gists/index\\",
              path: \\"/\\",
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-ee32124d.js\\";
      import * as route1 from \\"/build/routes/gists/index-a24a2fe0.js\\";
      window.__remixRoutes = {
        \\"routes/gists\\": route0,
        \\"routes/gists/index\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning to a new route loads data for all routes on the page: page 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Gists Fixture App</title>
    <meta
      name=\\"description\\"
      content=\\"We're just tryin' to make sure stuff works, ya know?!\\"
    />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/\\">
      <header><h1>Cool Gists App</h1></header>
      <nav>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists\\">View Some gists</a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/user-gists/ryanflorence\\"
              >Server Redirect</a
            >
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/fart\\">Broken link</a>
          </li>
        </ul>
      </nav>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/index\\": {
              fileName: \\"routes/index-2925bc5f.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
          },
          routes: { \\"routes/index\\": { id: \\"routes/index\\", path: \\"/\\" } },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/\\",
            route: { id: \\"routes/index\\", path: \\"/\\" },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: { \\"routes/index\\": null },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/index-2925bc5f.js\\";
      window.__remixRoutes = { \\"routes/index\\": route0 };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning to a new route loads data for all routes on the page: page 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixServerHandoff = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": {
              fileName: \\"entry-browser-c7e14c78.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
              ],
            },
            \\"global.css\\": { fileName: \\"global-ec887178.css\\" },
            \\"routes/index\\": {
              fileName: \\"routes/index-2925bc5f.js\\",
              imports: [
                \\"_shared/index-27f12631.js\\",
                \\"_shared/index-fe6f4507.js\\",
                \\"_shared/Shared-fb04e9d8.js\\",
              ],
            },
          },
          routes: { \\"routes/index\\": { id: \\"routes/index\\", path: \\"/\\" } },
          version: \\"d5b82f9f94846cacb67f0168dacac7da7ea224ea\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/\\",
            route: { id: \\"routes/index\\", path: \\"/\\" },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: { \\"routes/index\\": null },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/index-2925bc5f.js\\";
      window.__remixRoutes = { \\"routes/index\\": route0 };
    </script>
    <script src=\\"/build/entry-browser-c7e14c78.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;
